--- a/CLIENT/internal review/manifest.json
+++ b/CLIENT/internal review/manifest.json
@@ -4,12 +4,15 @@
     "description": "Build an Extension!",
     "manifest_version": 2 ,
 	
-	 "content_scripts": [
+	 "content_scripts": 
+	 [
    {
      "matches": ["<all_urls>"],
      "js": ["content.js"]
-   }
-                        ]
+   } 
+	 ]
+						
+	
 	
     
   }
