--- a/playground1/manifest.json
+++ b/playground1/manifest.json
@@ -13,7 +13,8 @@
 	{
 		
 		"default_popup": "popup.html",
-		"default_title": "Anti Phishing Toolkit"
+		"default_title": "Anti Phishing Toolkit",
+		"default_icon": "icon.png"
 	},
 	
 	"background":
